tests/ui/type-alias-impl-trait/nested.stderr
error: item does not constrain `Foo::{opaque#0}`
  --> $DIR/nested.rs:11:4
   |
LL | fn bar() -> Bar {
   |    ^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/nested.rs:3:12
   |
LL | type Foo = impl std::fmt::Debug;
   |            ^^^^^^^^^^^^^^^^^^^^

error[E0277]: `Bar` doesn't implement `Debug`
  --> $DIR/nested.rs:17:22
   |
LL |     println!("{:?}", bar());
   |               ----   ^^^^^ `Bar` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |               |
   |               required by a bound introduced by this call
   |
   = help: the trait `Debug` is not implemented for `Bar`
note: required by a bound in `core::fmt::rt::Argument::<'_>::new_debug`
  --> $SRC_DIR/core/src/fmt/rt.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
